# multicoretests

./: q
lib/: STM.ml
src/sys/: dune  stm_tests.ml
