;; Test of the Sys library

;; this prevents the tests from running on a default build

(alias
 (name default)
 (package multicoretests)
 (deps stm_tests.exe lin_tests.exe lin_tests_dsl.exe))

(executable
 (name stm_tests)
 (modules stm_tests)
 (libraries STM)
 (preprocess
  (pps ppx_deriving.show ppx_deriving.eq)))

(rule
 (alias runtest)
 (package multicoretests)
 (deps stm_tests.exe)
 (action
  (run ./%{deps} --no-colors --verbose)))
